--- a/config/locales/custom.en.yml
+++ b/config/locales/custom.en.yml
@@ -45,6 +45,7 @@ en:
     profile_details_settings: 'Public / Private Profile'
     profile_public_title: Public Profile
     profile_public_explanation: 'The following information will be visible to other people, such as posts in the forum or comments in the blog.'
+    profile_public_upload: Upload a photo for use in your public profile
     profile_private_title: Private Profile
     profile_private_explanation: 'This information will be kept private and not shared with anyone.'
     profile_account_title: "Update Email / Account Login"
