--- a/config/locales/custom.ja.yml
+++ b/config/locales/custom.ja.yml
@@ -22,7 +22,7 @@ ja:
     prev_page: "<i class='icon-angle-left'></i> Previous"
     login: ログイン
     logout: ログアウト
-    account: Account
+    account: My Account
     errors_below: Please review the problems below
 
     profile_email: Eメールアドレス
