--- a/core/config/locales/custom.de.yml
+++ b/core/config/locales/custom.de.yml
@@ -22,13 +22,13 @@ de:
     prev_page: "<i class='icon-angle-left'></i> Früher"
     login: Anmelden
     logout: Abmelden
-    account: Rechnung
+    account: Mein Benutzerkonto
     errors_below: Bitte überprüfen Sie die folgenden Probleme
 
     profile_email: E-Mail
-    profile_password: Passwort
-    profile_password_confirmation: Passwort Bestätigung
-    profile_current_password: Aktuelles Passwort
+    profile_password: Neues Passwort
+    profile_password_confirmation: Neues Passwort - wiederholen
+    profile_current_password: Altes Passwort
     profile_first_name: Vorname
     profile_last_name: Nachname
     profile_address: Adresse
@@ -38,19 +38,19 @@ de:
     profile_country: Land
     profile_zipcode: Postleitzahl
     profile_public_name: Öffentlicher Benutzername
-    profile_update_btn: Aktualisieren Sie Ihr Profil
-    profile_account_settings: Account-Einstellungen
-    profile_details_settings: 'Public / Privates Profil'
+    profile_update_btn: Änderungen speichern
+    profile_account_settings: Zugangsdaten
+    profile_details_settings: 'Benutzerdaten'
     profile_public_title: Öffentliches Profil
-    profile_public_explanation: 'Die folgenden Informationen werden sichtbar sein, andere Menschen, wie Beiträge im Forum oder Kommentare im Blog.'
-    profile_public_upload: Laden Sie ein Foto für den Einsatz in Ihrem öffentlichen Profil
-    profile_private_title: Privates Profil
-    profile_private_explanation: 'Diese Informationen werden vertraulich behandelt und nicht an Dritte weitergegeben.'
-    profile_account_title: "Aktualisieren Email / Konto Login"
-    profile_account_explanation: "Denken Sie daran: nächste Mal anmelden, werden Sie Ihre E-Mail-Adresse aktualisiert."
-    profile_account_password_title: Ändern Sie Ihr Passwort
-    profile_account_password_current_title: Aktuelles Passwort
-    profile_account_password_current_explanation: "Ihre aktuelle Kennwort ist erforderlich, um Änderungen vorzunehmen."
+    profile_public_explanation: 'Die folgenden Informationen sind für andere Benutzer sichtbar, wenn du Beiträge im Forum und im Blog veröffentlichst.'
+    profile_public_upload: Hier kannst du ein Foto von dir hochladen.
+    profile_private_title: Geschütztes Profil
+    profile_private_explanation: 'Die folgenden Daten werden nur intern verwendet und nicht mit anderen Benutzern geteilt.'
+    profile_account_title: "Email-Adresse ändern"
+    profile_account_explanation: "Bitte beim nächsten Anmeldevorgang diese neue Email-Adresse verwenden."
+    profile_account_password_title: Passwort ändern
+    profile_account_password_current_title: Altes Passwort
+    profile_account_password_current_explanation: "Bitte hier das alte Passwort eingeben, um die Änderung zu bestätigen."
     profile_profile_updated: Ihr Profil wurde aktualisiert
     profile_email_confirmation: 'Eine E-Mail wurde an die neue E-Mail-Adresse geschickt worden - müssen Sie auf den Bestätigungslink klicken, bevor Sie sich anmelden können mit dem neuen E-Mail-Adresse'
     profile_password_updated: Ihr Passwort wurde aktualisiert
