--- a/core/config/locales/custom.en.yml
+++ b/core/config/locales/custom.en.yml
@@ -24,7 +24,7 @@ en:
     prev_page: "<i class='icon-angle-left'></i> Previous"
     login: Login
     logout: Logout
-    account: Account
+    account: My Account
     errors_below: Please review the problems below
 
     profile_email: Email
