--- a/event/config/locales/ems.en.yml
+++ b/event/config/locales/ems.en.yml
@@ -12,7 +12,7 @@ en:
     ticket_receipt_thank_you: Thank you
     ticket_receipt_ticket_number: Ticket Number
     ticket_receipt_price: Price
-    ticket_informaton: Ticket Information
+    ticket_information: Ticket Information
     ticket_contact: Contact Information
     registration_receipt_title: Reservation Receipt
     registration_email: Email
