--- a/cms/config/locales/cms.de.yml
+++ b/cms/config/locales/cms.de.yml
@@ -18,4 +18,4 @@ de:
     delete: löschen
     comments_stat: Kommentare
     blog_login_required: 'Anmeldung ist erforderlich, um diesen Blog zugreifen'
-    
+    comment_login_required: "Bitte loggen Sie sich ein, um Ihre Benutzerkonto, um einen Kommentar zu verfassen"
