--- a/newsletter/config/locales/nms.cs.yml
+++ b/newsletter/config/locales/nms.cs.yml
@@ -1,9 +1,14 @@
 cs:
   nms:
     subscribe_button: Přihlásit
+    unsubscribe_button: Odhlásit
+    update_subscription_button: Aktualizace předplatné
     subscription_successful: "Úspěšně jste se přihlásili k odběru newsletteru. Aby bylo možné aktivovat předplatné, poslali jsme vám potvrzovací e-mail. Musíte kliknout na odkaz pro potvrzení, aby dostávat newsletter."
+    subscription_updated: Vaše předplatné byl úspěšně aktualizován
+    unsubscribe_successful: Váš e-mail byl odhlášen
     
     #--- Mailchimp specific errors
     List_DoesNotExist: Uvedené v seznamu neexistuje
     List_AlreadySubscribed: Tento e-mail je již předplatné
     Email_NotExists: Uvedený e-mail neexistuje
+    mc_unknown_error: Unknown Mailchimp error occurred
