--- a/core/config/locales/custom.de.yml
+++ b/core/config/locales/custom.de.yml
@@ -24,6 +24,8 @@ de:
     logout: Abmelden
     account: Mein Benutzerkonto
     errors_below: Bitte überprüfen Sie die folgenden Probleme
+    login_required: Bitte auf Ihr Konto erst anmelden
+    resource_invalid: Angeforderte Seite ist auf Ihrem Konto nicht verfügbar
 
     profile_email: E-Mail
     profile_password: Neues Passwort
@@ -56,4 +58,8 @@ de:
     profile_password_updated: Ihr Passwort wurde aktualisiert
     profile_email_needs_confirmation: 'Ihre E-Mail-Adresse wurde bereits geändert worden'
     profile_email_needs_confirmation_2: 'Eine E-Mail an diese Adresse zur Bestätigung gesandt. Wenn Sie nicht die Bestätigung per E-Mail, aktualisieren Sie einfach die E-Mail noch einmal neu zu senden Sie die Bestätigung.'
+    
+  email:
+    salutation: "Liebe/r %{value},"
+    thank_you: "Vielen Dank"
     
