--- a/core/config/locales/custom.fi.yml
+++ b/core/config/locales/custom.fi.yml
@@ -26,6 +26,8 @@ fi:
     logout: Kirjaudu ulos
     account: Oma tili
     errors_below: Tarkista ongelmat alla
+    login_required: Ole hyvä ja kirjaudu tilillesi ensin
+    resource_invalid: Sivu ei ole käytettävissä tililläsi
 
     profile_email: Sähköposti
     profile_password: Salasana
@@ -58,3 +60,8 @@ fi:
     profile_password_updated: Salasanasi on päivitetty
     profile_email_needs_confirmation: 'Sähköpostiosoitteesi on jo muutettu'
     profile_email_needs_confirmation_2: 'Vahvistusviesti on lähetetty tähän sähköpostiosoitteeseen.  Jos et ole saanut vahvistusviestiä, päivitä sähköpostiosoitteesi uudelleen vahvistuksen uudelleen lähettämiseksi.'
+
+  email:
+    salutation: "Hei %{value},"
+    thank_you: Kiitos
+    
