--- a/config/locales/nms.ja.yml
+++ b/config/locales/nms.ja.yml
@@ -1,14 +1,14 @@
 ja:
   nms:
-    subscribe_button: Subscribe
-    unsubscribe_button: Unsubscribe
-    update_subscription_button: Update Subscription
-    subscription_successful: "You have successfully subscribed to the newsletter. In order to activate your subscription, we have sent you a confirmation e-mail.  You must click the confirmation link in order to receive the newsletter."
-    subscription_updated: Your subscription was successfully updated
-    unsubscribe_successful: Your email has been unsubscribed
+    subscribe_button: 購読
+    unsubscribe_button: 購読解除
+    update_subscription_button: 購読情報を更新する
+    subscription_successful: "あなたの購読申し込みを受理しました。ニュースレターの配信を始めるために、登録されたメールアドレスに認証メールをお送りしました。ニュースレターを受け取るためにはそのメールの中の認証リンクをクリックしなければなりません。"
+    subscription_updated: あなたの購読情報は更新されました
+    unsubscribe_successful: あなたのeメールアドレスは購読解除されています
     
     #--- Mailchimp specific errors
-    List_DoesNotExist: The specified list does not exist
-    List_AlreadySubscribed: This email is already subscribed
-    Email_NotExists: The specified email does not exist
-    mc_unknown_error: Unknown Mailchimp error occurred
+    List_DoesNotExist: このリストは存在しません
+    List_AlreadySubscribed: このeメールアドレスは既に購読登録されています
+    Email_NotExists: このeメールアドレスは存在しません
+    mc_unknown_error: 不明なMailchimpのエラーが起こりました
